...
  late String prevDescription;
  late String prevArticleLink;
  late String appBarTitle;
  List<dynamic> questions = [];
  late Topic? updatedTopicDoc;
  List<dynamic> _tags = [];
  List<String> options = ['Patient', 'Parent', 'Healthcare Professional'];
  String quizID = '';
  bool quizAdded = false;
  List<dynamic> _categories = [];
  List<String> _categoriesOptions = [];
  final TextEditingController _newCategoryNameController =
      TextEditingController();
...
                          child: Text(
                            'Please select at least one tag.',
                            style: TextStyle(color: Colors.red),
                          ),
                        ),
                      TextFormField(
                        key: const Key('titleField'),
                        controller: titleController,
                        maxLength: 70,
                        decoration: const InputDecoration(
                          labelText: 'Title *',
                          prefixIcon:
                              Icon(Icons.drive_file_rename_outline_outlined),
...
                              ),
                          ],
                        ),
                      ),
                      const SizedBox(height: 10.0),
                      TextFormField(
                        key: const Key('descField'),
                        controller: descriptionController,
                        maxLines: 5, // Reduced maxLines
                        maxLength: 500,
                        decoration: const InputDecoration(
                          labelText: 'Description *',
                          prefixIcon: Icon(Icons.description_outlined),
...
                      ),
                      const SizedBox(height: 10.0),
                      Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          ElevatedButton.icon(
                            key: const Key('uploadMediaButton'),
                            onPressed: () {
                              if (_videoURL != null || _imageURL != null) {
                                changingMedia = true;
                              }
                              if (_videoURL == null && _imageURL == null) {
                                changingMedia = false;
...
                            },
                            icon: const Icon(
                              Icons.cloud_upload_outlined,
                            ),
                            label: _videoURL != null || _imageURL != null
                                ? const Text(
                                    'Change Media',
                                    style: TextStyle(
                                      color: Colors.red,
                                      fontWeight: FontWeight.bold,
                                    ),
                                  )
                                : const Text(
...

                            await _showDeleteQuestionDialog(
                                context, titleController.text);
                          }
                        },
                        child: Text(
                          editing ? "UPDATE TOPIC" : "PUBLISH TOPIC",
                          style: const TextStyle(
                            color: Colors.white,
                            fontWeight: FontWeight.bold,
                          ),
                        ),
                      ),
...
      builder: (BuildContext context) {
        return Column(
          mainAxisSize: MainAxisSize.min,
          children: <Widget>[
            ListTile(
              leading: const Icon(Icons.image_outlined),
              title: const Text('Upload Image'),
              onTap: () {
                Navigator.pop(context);
                _pickFromDevice("image");
              },
            ),
            ListTile(
              leading: const Icon(Icons.videocam_outlined),
              title: const Text('Upload Video'),
              onTap: () {
                Navigator.pop(context);
                _pickFromDevice("video");
              },
            ),
          ],
...
